# BasicsOfProgrammingCourse

./: CMakeLists.txt  main.c
libs/algorithms/: algorithm.c  algorithm.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/matrix/: matrix.c  matrix.h  test_matrix.c  test_matrix_task.c
libs/data_structures/ordered_array_set/: ordered_array_set.h
libs/data_structures/vector/: vector.c  vector.h
